rewrote addTask html for responsiveness. Added resposive design for 428px, changed some JavaScript that were buggy because of the rewrite

--- a/styles/taskstyle.css
+++ b/styles/taskstyle.css
@@ -94,7 +94,7 @@
   padding: 18px 10px;
 }
 
-.d-none {
+.display-none {
   display: none;
 }
 
@@ -120,6 +120,11 @@ body {
   background: #fff;
 }
 
+.category-custom-border {
+  border-top: none !important;
+  border: 1px solid #d1d1d1;
+}
+
 .prio-btn {
   display: flex;
   height: 61px;
@@ -140,6 +145,8 @@ body {
 
 .add-task-section form {
   display: flex;
+  flex-direction: column;
+  margin-left: 355px;
 }
 
 #add-task-form {
@@ -163,17 +170,45 @@ body {
   transform: translateX(300%);
 }
 
+.top-section {
+  display: flex;
+}
+
+.top-left {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
+
+.top-right {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
+
+
+.bottom-section {
+  display: flex;
+}
+
+.bottom-left {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
+
+.bottom-right {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+  margin-top: -50px
+}
+
 .dark-background {
   background-color: rgba(0, 0, 0, 0.4);
 }
 
-.left {
-  display: inline-flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 14px;
-  margin-left: 355px;
-}
+
 
 .left-dialog {
   margin-left: 0;
@@ -186,13 +221,6 @@ body {
   z-index: 999;
 }
 
-.right {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 14px;
-}
 
 #closeAddTask {
   position: absolute;
@@ -288,6 +316,7 @@ body {
 .form-btn {
   margin-top: 150px;
   margin-left: 78px;
+  margin-right: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -406,7 +435,6 @@ ul {
   margin-top: -15px;
   border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
-  border: 1px solid #d1d1d1;
   background: #fff;
   border-top: none;
 }
@@ -487,6 +515,8 @@ ul {
   border-bottom-right-radius: 0px !important;
   border-bottom: none !important;
 }
+
+
 
 li {
   cursor: pointer;
@@ -573,275 +603,117 @@ li {
   padding-left: 15px;
 }
 
-@media (max-width: 1330px) {
-  .add-task-section h1 {
-    margin-left: 300px;
-  }
-  .left {
-    margin-left: 310px;
-  }
 
-  .seperator {
-    margin-left: 50px;
-    margin-right: 50px;
-  }
-}
 
-@media (max-width: 1260px) {
-  #title-input {
-    width: 400px;
-  }
-  #description-input {
-    width: 400px;
-  }
-  #category-container {
-    width: 400px;
-  }
-  #assigned-container {
-    width: 400px;
-  }
-  #task-date {
-    width: 400px;
-  }
-  .prio-btn {
-    width: 400px;
-  }
-  .subtasks-container {
-    width: 400px;
-  }
-  .form-btn {
-    margin-left: 40px;
-    gap: 20px;
-  }
-}
 
-@media (max-width: 1220px) {
-  .add-task-section h1 {
-    font-size: 47px;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    margin-left: 275px;
-  }
-  .left {
-    margin-left: 275px;
-  }
-  .label {
-    font-size: 18px;
-  }
-  #title-input {
-    font-size: 18px;
-    width: 390px;
-  }
-  #description-input {
-    font-size: 18px;
-    width: 390px;
-  }
-  #category-container {
-    width: 390px;
-  }
-  #category-input {
-    font-size: 18px;
-  }
-  #assigned-container {
-    width: 390px;
-  }
-  #assigned-input {
-    font-size: 18px;
-  }
-  #task-date {
-    font-size: 18px;
-    width: 390px;
-  }
-  .prio-btn button {
-    font-size: 18px;
-  }
-
-  .prio-btn {
-    height: 55px;
-    gap: 5px;
-  }
-
-  #urgentBtn {
-    width: 123px;
-  }
-  #mediumBtn {
-    width: 123px;
-  }
-  #lowBtn {
-    width: 123px;
-  }
-
-  .subtasks-container {
-    width: 390px;
-  }
-  #subtask-input {
-    font-size: 18px;
-  }
-}
 
 @media (max-width: 428px) {
-  .add-task-section {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .add-task-section form {
-    flex-direction: column;
-    align-items: center;
-  }
-
   .add-task-section h1 {
-    font-size: 47px;
     margin-left: 33px;
-    margin-top: 40.98px;
-    margin-bottom: 55px;
+    margin-top: 41px;
+    font-size: 47px;
   }
-
-  label {
-    font-size: 16px;
+  .add-task-section form {
+    margin-left: 31px;
   }
-
-  .left {
-    margin-left: 0px;
-  }
-
   .seperator {
     display: none;
   }
-
-  #title-input {
-    height: 51px;
-    width: 363px;
+  .top-section,
+  .bottom-section
+  {
+    flex-direction: column;
+    gap: 9px;
   }
 
-  #description-input {
-    width: 363px;
-    height: 93px;
-  }
-
-  #category-container {
-    width: 363px;
-  }
-
-  #assigned-container {
-    width: 363px;
-  }
-
-  #task-date {
-    width: 363px;
-  }
-
-  .prio-btn {
-    width: 363px;
-    height: 51px;
-  }
-
-  .urgent-btn {
-    height: 50px;
-    width: 114px;
-  }
-  .medium-btn {
-    height: 50px;
-    width: 115px;
-  }
-  .low-btn {
-    height: 50px;
-    width: 114px;
-  }
-
-  .date-label {
-    margin-top: 8px;
-  }
-
-  .subtasks-input {
-    width: 255px;
-  }
-
-  .contacts {
-    width: 363px;
-  }
-
-  .invite-contact {
-    width: 354px;
-  }
-
-  .invite-contact img {
-    margin-right: 3px;
-  }
-
-  .contact-item {
-    width: 357px;
-  }
-
-  .subtasks-container {
-    width: 363px;
-  }
-
-  #renderContacts {
-    overflow-x: hidden;
-  }
-
-  #renderCategorys {
-    width: 361px;
-    overflow-x: hidden;
-  }
-
-  #generatedInput {
-    width: 228px;
-  }
-
-  .clear-btn {
-    display: none;
-  }
-
-  .form-btn {
-    margin-top: 0px;
-  }
-
-  .create-btn {
-    position: absolute;
-    top: 14px;
-    right: 25px;
-  }
+.bottom-right {
+  margin-top: 0px;
 }
 
-@media (max-width: 380px) {
-  .add-task-section h1 {
-    margin-bottom: 40px;
-  }
-  #title-input,
-  #description-input,
-  #category-container,
-  #assigned-container,
-  #task-date,
-  .subtasks-container,
-  .prio-btn {
-    width: 340px;
-  }
-  #urgentBtn,
-  #mediumBtn,
-  #lowBtn {
-    width: 110px;
-  }
+.prio-label {
+  order: -1;
 }
 
-@media (max-width: 350px) {
-  .add-task-section h1 {
-    margin-bottom: 30px;
-    margin-left: 15px;
-  }
-  #title-input,
-  #description-input,
-  #category-container,
-  #assigned-container,
-  #task-date,
-  .subtasks-container,
-  .prio-btn {
-    width: 320px;
-  }
-  #urgentBtn,
-  #mediumBtn,
-  #lowBtn {
-    width: 103px;
-  }
+.prio-btn {
+  order: -1;
 }
+#task-date {
+  margin-bottom: 9px;
+}
+label {
+  font-size: 16px;
+}
+
+.categorys,
+#render-categorys,
+#title-input,
+#description-input,
+#category-container,
+#assigned-container,
+#task-date,
+.subtasks-container,
+.contact-item,
+.prio-btn {
+  width: 363px;
+  font-size: 16px;
+}
+
+#category-input,
+#generatedInput,
+#generatedSubtaskInput {
+  width: 232px
+}
+
+#description-input {
+  height: 93px;
+}
+
+.category-li-item,
+.contact-item {
+  font-size: 16px;
+}
+
+#urgentBtn,
+#mediumBtn,
+#lowBtn {
+  height: 47px;
+  width: 111px;
+  padding: 18px 10px;
+  font-size: 16px;
+}
+
+.contacts {
+  width: 363px;
+}
+
+.contact-item {
+  margin-right: 8px;
+}
+
+.contact-img {
+  margin-right: 9px;
+}
+.checkboxImg {
+  margin-right: 6px;
+}
+
+.clear-btn {
+  display: none;
+}
+
+.create-btn-web {
+  display: none;
+}
+
+.create-btn-responsive {
+  position: absolute;
+  top: 15px;
+  right: 25px;
+  height: 51px;
+  width: 118px;
+}
+
+#subtask-content {
+  padding-bottom: 40px;
+}
+
