--- a/styles/styleSidebar.css
+++ b/styles/styleSidebar.css
@@ -88,11 +88,11 @@ header {
 
 /* RESPONSIVE */
 
-@media screen and (min-width: 320px) and (max-width: 420px){
+@media only screen and (max-width: 428px){
     nav {
         position: fixed;
         padding-top: 0;
-        width: 100vw;
+        width: 100%;
         bottom: 0;
         left: 0;
         right: 0;
@@ -100,6 +100,7 @@ header {
     }
 
     header {
+        width: auto;
         position: sticky;
         top: 0;
         height: 80px;
