--- a/styles/summary.css
+++ b/styles/summary.css
@@ -21,6 +21,11 @@
   font-size: 0.8em;
 }
 
+.headline-container {
+  display: flex;
+  align-items: center;
+}
+
 .bold {
   font-weight: bold;
 }
@@ -115,4 +120,62 @@
   .headline-nutshell {
     padding: 0 !important;
   }
+  .childDiv {
+    height: auto;
+  }
+  .item-1 {
+    grid-template-columns: 25% 25% 25%;
+  }
+  .item-2 {
+    width: calc(75% + 30px);
+  }
+  .item-3 {
+    grid-template-columns: calc(37.5% + 7.5px) calc(37.5% + 7.5px);
+  }
+}
+
+@media screen and (max-width: 760px) {
+  .parentDiv {
+    display: flex;
+    align-items: center !important;
+
+    margin-left: 0;
+    padding-left: 0;
+    width: auto;
+  }
+  .childDiv {
+    display: flex;
+  }
+  .firstContainer {
+  }
+  .item-1,
+  .item-2,
+  .item-3 {
+    justify-content: center;
+  }
+  .item-2 {
+    justify-self: center;
+  }
+}
+
+@media screen and (max-width: 510px) {
+  .parentDiv {
+    width: 100%;
+  }
+  .item-1 {
+    grid-template-columns: 20% 20% 20%;
+  }
+  .item-2 {
+    grid-template-columns: 50% 50%;
+    width: calc(60% + 30px);
+  }
+  .item-3 {
+    grid-template-columns: calc(30% + 7.5px) calc(30% + 7.5px);
+  }
+  .childDiv {
+    justify-items: flex-start;
+  }
+}
+
+@media screen and (max-width: 450px) {
 }
