summary responsive final

--- a/styles/summary.css
+++ b/styles/summary.css
@@ -9,6 +9,10 @@
   background-color: rgba(246, 247, 248, 255);
 }
 
+.summaryHeadlineText {
+  border-right: 2px solid gray;
+}
+
 .size3Em {
   font-size: 3em;
 }
@@ -38,6 +42,9 @@
   color: #29abe2;
 }
 
+.blue-line {
+  display: none;
+}
 .firstContainer {
   display: grid;
   grid-template-columns: 1fr;
@@ -138,16 +145,41 @@
   .parentDiv {
     display: flex;
     align-items: center !important;
-
+    max-width: 100vw;
+    overflow-x: hidden;
+    padding-bottom: 165px;
     margin-left: 0;
     padding-left: 0;
     width: auto;
   }
   .childDiv {
     display: flex;
+    margin: 0 auto;
+    max-width: 100%;
   }
-  .firstContainer {
+  .summaryHeadlineText {
+    border: none !important;
   }
+
+  .headline-container {
+    gap: 0px !important;
+    align-self: flex-start;
+    margin-left: 20px;
+  }
+
+  .blue-line {
+    display: block;
+    width: 40%;
+    height: 2px;
+    background-color: #29abe2;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .border-end {
+    border: none !important;
+  }
+
   .item-1,
   .item-2,
   .item-3 {
@@ -173,7 +205,7 @@
     grid-template-columns: calc(30% + 7.5px) calc(30% + 7.5px);
   }
   .childDiv {
-    justify-items: flex-start;
+    justify-content: center;
   }
 }
 
