some more addTask responsiveness and bugfixes with category

--- a/styles/taskstyle.css
+++ b/styles/taskstyle.css
@@ -805,18 +805,74 @@ li {
   }
 }
 
-
-@media only screen and (max-width: 949px) and (min-width: 768px) {
+@media only screen and (max-width: 760px) and (min-width: 429px) {
+  .add-task-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   .add-task-section h1 {
-    margin-left: 340px;
+    margin-left: 0;
+  }
+  .add-task-section form {
+    align-items: center;
+    margin-left: 0;
+  }
+
+  .top-section {
+    flex-direction: column;
+  }
+  .bottom-section {
+    flex-direction: column;
+  }
+
+  .bottom-right {
+    margin-top: 20px;
+  }
+  .seperator {
+    display: none;
+  }
+  .prio-btn {
+    order: -1;
+  }
+  .prio-label {
+    order: -1;
+  }
+  .bottom-left {
+    gap: 16px;
+  }
+  #category-input,
+  #generatedInput,
+  #generatedSubtaskInput {
+    width: 280px;
+  }
+  #description-input,
+  #task-date {
+    margin-bottom: 10px;
+  }
+  #renderCategorys,
+  .categorys {
+    width: 422px;
+  }
+  .category-generated-list {
+    margin-top: -3px;
+  }
+}
+
+
+@media only screen and (max-width: 949px) and (min-width: 761px) {
+  .add-task-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: -50px;
+  }
+  .add-task-section h1 {
     margin-top: 41px;
     margin-bottom: 20px;;
     font-size: 61px;
   }
 
-  .add-task-section form {
-    margin-left: 330px;
-  }
 
   .seperator {
     display: none;
