--- a/styles/animations.css
+++ b/styles/animations.css
@@ -47,6 +47,6 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.5) !important;
   z-index: 999;
 }
