--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -464,7 +464,6 @@ body {
 
 .dialog__createLeftSide,
 .dialog__editLeftSide {
-  width: 100%;
   height: 50%;
   background-color: #2a3647;
   /* padding-bottom: 60px; */
@@ -508,7 +507,7 @@ body {
   }
 }
 
-@media only screen and (max-width: 428px) {
+@media only screen and (max-width: 800px) {
   .pt-20 {
     padding-top: 20px;
   }
@@ -555,9 +554,9 @@ body {
     align-items: center;
   }
 
-  /* .custom-btn {
+  .custom-btn {
     border-radius: 50%;
-  } */
+  }
 
   .pos-btn {
     position: fixed;
